<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/blue"
    android:orientation="vertical">

    <LinearLayout
        style="@style/TabTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/regisName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/regisNameEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/regisEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/regisEmailEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/regisPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/regisPasswordEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/regisCHPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_password" />

        <EditText
            android:id="@+id/regisCHPasswordEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/check_password"
            android:inputType="text" />

        <Button
            android:id="@+id/regisBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:onClick="regisClicked"
            android:text="@string/regitrate" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>